fixing notfound button styles on mobile

--- a/public/styles/notFound.css
+++ b/public/styles/notFound.css
@@ -62,6 +62,9 @@ main .error-container{
     background: transparent;
     border: none;
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .image-container{
     display: none;
